5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1807_2564.log
== TEST (2019-06-06 16:40:11) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	if(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	else(gols[2] = gols[2] + 1)	

-- ERROR:
File "XXXX", line 13
    else(gols[2] = gols[2] + 1)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:16) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	if(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	else(gols[2] = gols[2] + 1):	

-- ERROR:
File "XXXX", line 13
    else(gols[2] = gols[2] + 1):	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:42:40) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	if(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	else(gols[2] = gols[2] + 1):
print(cont)		

-- EXECUTION TIME:
0.80276
-- ERROR:
  File "/home/codebench/codes/1807/2564/main.py", line 13
    else(gols[2] = gols[2] + 1):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:42:44) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	if(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	else(gols[2] = gols[2] + 1):
print(cont)		

-- ERROR:
File "XXXX", line 13
    else(gols[2] = gols[2] + 1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:43:39) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	else:
		gols[2] = gols[2] + 1

print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:47:41) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		gols[2] = gols[2] + 1

print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:40) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		gols[3] = gols[3] + 1

print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:49:53) 
-- CODE:
from numpy import*

gols = array(eval(input("numero de gols:")))
golsadv = array(eval(input("numeros de gols do adversario:")))

cont = zeros(3, dtype=int)

for i in range(0, size(gols)):
	#vitorias
	if (gols[i]) > golsadv[i]:
		cont[0] = cont[0] + 1 
	#empate
	elif(gols[i] == golsadv[i]):
		cont[1] = cont[1] + 1
	#derrota
	else:
		cont[2] = cont[2] + 1
print(cont)		

-- EXECUTION TIME:
1.03015
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
